--- a/Data Understanding  & Preparation.ipynb
+++ b/Data Understanding  & Preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"season2018 v1 149 matches done.csv\").drop(\"Unnamed: 0\", axis= 1)"
+    "df = pd.read_csv(\"season2018 v3.csv\").drop(\"Unnamed: 0\", axis= 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,6 +60,7 @@
        "      <th>away_formation</th>\n",
        "      <th>home_players</th>\n",
        "      <th>away_players</th>\n",
+       "      <th>round</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -80,6 +81,7 @@
        "      <td>4-2-3-1</td>\n",
        "      <td>[(\"R. M'Bolhi\", 'G'), ('R. Arias', 'D'), ('Hus...</td>\n",
        "      <td>[('A. Doukha', 'G'), ('H. Belkaroui', 'D'), ('...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -98,6 +100,7 @@
        "      <td>4-4-2</td>\n",
        "      <td>[('M. Asselah', None), ('Alemão', None), ('Kha...</td>\n",
        "      <td>[('Mohamed Awad', None), ('Osama Hawsawi', Non...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -116,6 +119,7 @@
        "      <td>4-2-3-1</td>\n",
        "      <td>[('Z. Laaroubi', 'G'), ('Hussein Abdul Ghani',...</td>\n",
        "      <td>[('B. Jones', 'G'), ('Bruno Uvini', 'D'), ('Om...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -134,6 +138,7 @@
        "      <td>4-2-3-1</td>\n",
        "      <td>[('J. Duncan', 'G'), ('Adnan Falatah', None), ...</td>\n",
        "      <td>[('M. Koval', 'G'), ('M. Aguirregaray', 'D'), ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -152,6 +157,7 @@
        "      <td>4-3-3</td>\n",
        "      <td>[('Ali Al Habsi', 'G'), ('Botía', 'D'), ('Yasi...</td>\n",
        "      <td>[('C. Bonilla', 'G'), ('Naldo', 'M'), ('Gêgê',...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -193,15 +199,15 @@
        "3  [('J. Duncan', 'G'), ('Adnan Falatah', None), ...   \n",
        "4  [('Ali Al Habsi', 'G'), ('Botía', 'D'), ('Yasi...   \n",
        "\n",
-       "                                        away_players  \n",
-       "0  [('A. Doukha', 'G'), ('H. Belkaroui', 'D'), ('...  \n",
-       "1  [('Mohamed Awad', None), ('Osama Hawsawi', Non...  \n",
-       "2  [('B. Jones', 'G'), ('Bruno Uvini', 'D'), ('Om...  \n",
-       "3  [('M. Koval', 'G'), ('M. Aguirregaray', 'D'), ...  \n",
-       "4  [('C. Bonilla', 'G'), ('Naldo', 'M'), ('Gêgê',...  "
+       "                                        away_players  round  \n",
+       "0  [('A. Doukha', 'G'), ('H. Belkaroui', 'D'), ('...      1  \n",
+       "1  [('Mohamed Awad', None), ('Osama Hawsawi', Non...      1  \n",
+       "2  [('B. Jones', 'G'), ('Bruno Uvini', 'D'), ('Om...      1  \n",
+       "3  [('M. Koval', 'G'), ('M. Aguirregaray', 'D'), ...      1  \n",
+       "4  [('C. Bonilla', 'G'), ('Naldo', 'M'), ('Gêgê',...      1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,6 +243,30 @@
    "outputs": [],
    "source": [
     "#Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['fixture_id', 'home_team', 'away_team', 'home_goals', 'away_goals',\n",
+       "       'venue', 'referee', 'date', 'season', 'home_coach', 'away_coach',\n",
+       "       'home_formation', 'away_formation', 'home_players', 'away_players',\n",
+       "       'round'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
