--- a/Understanding the problem.ipynb
+++ b/Understanding the problem.ipynb
@@ -44,6 +44,7 @@
     "13. referee\n",
     "14. date\n",
     "15. season\n",
+    "16. round\n",
     "\n",
     "Would be nice to get:\n",
     "1. player performance rating\n",
