changed season2018 data file name

--- a/Data Collection.ipynb
+++ b/Data Collection.ipynb
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "season2018 = pd.read_csv(\"season2018 v3.csv\").drop(\"Unnamed: 0\", axis=1)"
+    "season2018 = pd.read_csv(\"season2018 v4.csv\").drop(\"Unnamed: 0\", axis=1)"
    ]
   },
   {
@@ -14899,10 +14899,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "season2018.to_csv(\"season2018 v4.csv\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -14992,6 +14994,368 @@
     "                           \"away_players\"]] = [home_coach, away_coach, home_formation,\n",
     "                           away_formation, home_players, away_players]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixture_id</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_goals</th>\n",
+       "      <th>away_goals</th>\n",
+       "      <th>venue</th>\n",
+       "      <th>referee</th>\n",
+       "      <th>date</th>\n",
+       "      <th>season</th>\n",
+       "      <th>home_coach</th>\n",
+       "      <th>away_coach</th>\n",
+       "      <th>home_formation</th>\n",
+       "      <th>away_formation</th>\n",
+       "      <th>home_players</th>\n",
+       "      <th>away_players</th>\n",
+       "      <th>round</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>151695</td>\n",
+       "      <td>Al-Ettifaq</td>\n",
+       "      <td>Al-Raed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Prince Mohamed Bin Fahd Stadium</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-08-30T18:40:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>L. Ramos</td>\n",
+       "      <td>B. Hasi</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[(\"R. M'Bolhi\", 'G'), ('R. Arias', 'D'), ('Hus...</td>\n",
+       "      <td>[('A. Doukha', 'G'), ('H. Belkaroui', 'D'), ('...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>151696</td>\n",
+       "      <td>Al-Hazm</td>\n",
+       "      <td>Al Wehda Club</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>King Abdul Aziz Stadium</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-08-30T19:05:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>D. Isăilă</td>\n",
+       "      <td>Fábio Carille</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-4-2</td>\n",
+       "      <td>[('M. Asselah', None), ('Alemão', None), ('Kha...</td>\n",
+       "      <td>[('Mohamed Awad', None), ('Osama Hawsawi', Non...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>151697</td>\n",
+       "      <td>Ohod</td>\n",
+       "      <td>Al-Nassr</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Prince Mohammed bin Abdul Aziz Stadium</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-08-30T19:15:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>F. Arce</td>\n",
+       "      <td>D. Carreño</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[('Z. Laaroubi', 'G'), ('Hussein Abdul Ghani',...</td>\n",
+       "      <td>[('B. Jones', 'G'), ('Bruno Uvini', 'D'), ('Om...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>151698</td>\n",
+       "      <td>Al-Qadisiyah FC</td>\n",
+       "      <td>Al-Fateh</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Prince Saud bin Jalawi Stadium</td>\n",
+       "      <td>Mark Clattenburg, England</td>\n",
+       "      <td>2018-08-31T18:40:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>A. Stanojević</td>\n",
+       "      <td>F. Al Jabal</td>\n",
+       "      <td>4-4-2</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[('J. Duncan', 'G'), ('Adnan Falatah', None), ...</td>\n",
+       "      <td>[('M. Koval', 'G'), ('M. Aguirregaray', 'D'), ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>151699</td>\n",
+       "      <td>Al-Hilal Saudi FC</td>\n",
+       "      <td>Al-Fayha</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>King Fahd Stadium</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-08-31T18:55:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>Jorge Jesus</td>\n",
+       "      <td>G. Costas</td>\n",
+       "      <td>4-1-4-1</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>[('Ali Al Habsi', 'G'), ('Botía', 'D'), ('Yasi...</td>\n",
+       "      <td>[('C. Bonilla', 'G'), ('Naldo', 'M'), ('Gêgê',...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>151931</td>\n",
+       "      <td>Al-Nassr</td>\n",
+       "      <td>Al Baten</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Prince Faisal bin Fahd Stadium</td>\n",
+       "      <td>Ovidiu Hategan, Romania</td>\n",
+       "      <td>2019-05-16T22:30:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>Rui Vitória</td>\n",
+       "      <td>M. Panait</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>5-3-2</td>\n",
+       "      <td>[('B. Jones', 'G'), ('Maicon', 'D'), ('Bruno U...</td>\n",
+       "      <td>[('Adriano Facchini', 'G'), ('Lucas', 'D'), ('...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>151932</td>\n",
+       "      <td>Al-Qadisiyah FC</td>\n",
+       "      <td>Al-Hazm</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Prince Saud bin Jalawi Stadium</td>\n",
+       "      <td>Antonio Mateu, Spain</td>\n",
+       "      <td>2019-05-16T22:30:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>Bandar Basryh</td>\n",
+       "      <td>D. Isăilă</td>\n",
+       "      <td>4-3-2-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[('J. Duncan', 'G'), ('Adnan Falatah', None), ...</td>\n",
+       "      <td>[('M. Asselah', 'G'), ('Z. Tsiskaridze', 'D'),...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>151933</td>\n",
+       "      <td>Al Taawon</td>\n",
+       "      <td>Al-Faisaly FC</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>King Abdullah Sport City Stadium</td>\n",
+       "      <td>Anastasios Sidiropoulos, Greece</td>\n",
+       "      <td>2019-05-16T22:30:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>Pedro Emanuel</td>\n",
+       "      <td>Al Humaidy Al Otaibi</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[('Hussain Shaian', 'G'), ('Ibrahim Al Zubaidi...</td>\n",
+       "      <td>[('Mustafa Malayekah', 'G'), ('Igor Rossi', 'D...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>151934</td>\n",
+       "      <td>Ohod</td>\n",
+       "      <td>Al-Ittihad FC</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Prince Mohammed bin Abdul Aziz Stadium</td>\n",
+       "      <td>Matt Conger, New Zealand</td>\n",
+       "      <td>2019-05-16T22:30:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>A. Souayah</td>\n",
+       "      <td>J. Sierra</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[('Khaled Sharahili', None), ('C. Medjani', 'M...</td>\n",
+       "      <td>[('Fawaz Al Qarni', 'G'), ('Ahmad Asiri', 'D')...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>151927</td>\n",
+       "      <td>Al-Ahli Jeddah</td>\n",
+       "      <td>Al-Ettifaq</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>King Abdullah Sports City</td>\n",
+       "      <td>Viktor Kassai, Hungary</td>\n",
+       "      <td>2019-05-16T22:30:00+03:00</td>\n",
+       "      <td>2018/2019</td>\n",
+       "      <td>Youssef Anbar</td>\n",
+       "      <td>Hélder Cristóvão</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>5-4-1</td>\n",
+       "      <td>[('Mohammed Al Owais', 'G'), ('Aderllan Santos...</td>\n",
+       "      <td>[(\"R. M'Bolhi\", 'G'), ('R. Arias', 'D'), ('Sal...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>240 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     fixture_id          home_team      away_team  home_goals  away_goals  \\\n",
+       "0        151695         Al-Ettifaq        Al-Raed           1           1   \n",
+       "1        151696            Al-Hazm  Al Wehda Club           0           0   \n",
+       "2        151697               Ohod       Al-Nassr           1           2   \n",
+       "3        151698    Al-Qadisiyah FC       Al-Fateh           0           0   \n",
+       "4        151699  Al-Hilal Saudi FC       Al-Fayha           1           0   \n",
+       "..          ...                ...            ...         ...         ...   \n",
+       "235      151931           Al-Nassr       Al Baten           2           1   \n",
+       "236      151932    Al-Qadisiyah FC        Al-Hazm           2           2   \n",
+       "237      151933          Al Taawon  Al-Faisaly FC           2           1   \n",
+       "238      151934               Ohod  Al-Ittihad FC           1           0   \n",
+       "239      151927     Al-Ahli Jeddah     Al-Ettifaq           5           0   \n",
+       "\n",
+       "                                      venue                          referee  \\\n",
+       "0           Prince Mohamed Bin Fahd Stadium                              NaN   \n",
+       "1                   King Abdul Aziz Stadium                              NaN   \n",
+       "2    Prince Mohammed bin Abdul Aziz Stadium                              NaN   \n",
+       "3            Prince Saud bin Jalawi Stadium        Mark Clattenburg, England   \n",
+       "4                         King Fahd Stadium                              NaN   \n",
+       "..                                      ...                              ...   \n",
+       "235          Prince Faisal bin Fahd Stadium          Ovidiu Hategan, Romania   \n",
+       "236          Prince Saud bin Jalawi Stadium             Antonio Mateu, Spain   \n",
+       "237        King Abdullah Sport City Stadium  Anastasios Sidiropoulos, Greece   \n",
+       "238  Prince Mohammed bin Abdul Aziz Stadium         Matt Conger, New Zealand   \n",
+       "239               King Abdullah Sports City           Viktor Kassai, Hungary   \n",
+       "\n",
+       "                          date     season     home_coach  \\\n",
+       "0    2018-08-30T18:40:00+03:00  2018/2019       L. Ramos   \n",
+       "1    2018-08-30T19:05:00+03:00  2018/2019      D. Isăilă   \n",
+       "2    2018-08-30T19:15:00+03:00  2018/2019        F. Arce   \n",
+       "3    2018-08-31T18:40:00+03:00  2018/2019  A. Stanojević   \n",
+       "4    2018-08-31T18:55:00+03:00  2018/2019    Jorge Jesus   \n",
+       "..                         ...        ...            ...   \n",
+       "235  2019-05-16T22:30:00+03:00  2018/2019    Rui Vitória   \n",
+       "236  2019-05-16T22:30:00+03:00  2018/2019  Bandar Basryh   \n",
+       "237  2019-05-16T22:30:00+03:00  2018/2019  Pedro Emanuel   \n",
+       "238  2019-05-16T22:30:00+03:00  2018/2019     A. Souayah   \n",
+       "239  2019-05-16T22:30:00+03:00  2018/2019  Youssef Anbar   \n",
+       "\n",
+       "               away_coach home_formation away_formation  \\\n",
+       "0                 B. Hasi        4-2-3-1        4-2-3-1   \n",
+       "1           Fábio Carille        4-2-3-1          4-4-2   \n",
+       "2              D. Carreño        4-2-3-1        4-2-3-1   \n",
+       "3             F. Al Jabal          4-4-2        4-2-3-1   \n",
+       "4               G. Costas        4-1-4-1          4-3-3   \n",
+       "..                    ...            ...            ...   \n",
+       "235             M. Panait        4-2-3-1          5-3-2   \n",
+       "236             D. Isăilă        4-3-2-1        4-2-3-1   \n",
+       "237  Al Humaidy Al Otaibi        4-2-3-1        4-2-3-1   \n",
+       "238             J. Sierra        4-2-3-1        4-2-3-1   \n",
+       "239      Hélder Cristóvão        4-2-3-1          5-4-1   \n",
+       "\n",
+       "                                          home_players  \\\n",
+       "0    [(\"R. M'Bolhi\", 'G'), ('R. Arias', 'D'), ('Hus...   \n",
+       "1    [('M. Asselah', None), ('Alemão', None), ('Kha...   \n",
+       "2    [('Z. Laaroubi', 'G'), ('Hussein Abdul Ghani',...   \n",
+       "3    [('J. Duncan', 'G'), ('Adnan Falatah', None), ...   \n",
+       "4    [('Ali Al Habsi', 'G'), ('Botía', 'D'), ('Yasi...   \n",
+       "..                                                 ...   \n",
+       "235  [('B. Jones', 'G'), ('Maicon', 'D'), ('Bruno U...   \n",
+       "236  [('J. Duncan', 'G'), ('Adnan Falatah', None), ...   \n",
+       "237  [('Hussain Shaian', 'G'), ('Ibrahim Al Zubaidi...   \n",
+       "238  [('Khaled Sharahili', None), ('C. Medjani', 'M...   \n",
+       "239  [('Mohammed Al Owais', 'G'), ('Aderllan Santos...   \n",
+       "\n",
+       "                                          away_players  round          status  \n",
+       "0    [('A. Doukha', 'G'), ('H. Belkaroui', 'D'), ('...      1  Match Finished  \n",
+       "1    [('Mohamed Awad', None), ('Osama Hawsawi', Non...      1  Match Finished  \n",
+       "2    [('B. Jones', 'G'), ('Bruno Uvini', 'D'), ('Om...      1  Match Finished  \n",
+       "3    [('M. Koval', 'G'), ('M. Aguirregaray', 'D'), ...      1  Match Finished  \n",
+       "4    [('C. Bonilla', 'G'), ('Naldo', 'M'), ('Gêgê',...      1  Match Finished  \n",
+       "..                                                 ...    ...             ...  \n",
+       "235  [('Adriano Facchini', 'G'), ('Lucas', 'D'), ('...     30  Match Finished  \n",
+       "236  [('M. Asselah', 'G'), ('Z. Tsiskaridze', 'D'),...     30  Match Finished  \n",
+       "237  [('Mustafa Malayekah', 'G'), ('Igor Rossi', 'D...     30  Match Finished  \n",
+       "238  [('Fawaz Al Qarni', 'G'), ('Ahmad Asiri', 'D')...     30  Match Finished  \n",
+       "239  [(\"R. M'Bolhi\", 'G'), ('R. Arias', 'D'), ('Sal...     30  Match Finished  \n",
+       "\n",
+       "[240 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "season2018"
    ]
   },
   {
