--- a/Understanding the problem.ipynb
+++ b/Understanding the problem.ipynb
@@ -151,8 +151,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this problem we could use a classification model If we just want to predict the final outcome of a match as (win, draw, defeat), but we want to predict the score of each team, this means that we need a regression model to predict how many goals will each team score."
+    "For this problem we could use a classification model If we just want to predict the final outcome of a match as (win, draw, defeat), but we want to predict the score of each team, this means that we need a regression model to predict how many goals will each team score.\n",
+    "\n",
+    "The exact algorithm is yet to be choosen, We will you try different algorithms, we will also try applying deep learning on our data using tensorflow"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
