Written some questions to answer in EDA, fixed the date column in preparation

--- a/Data Preparation.ipynb
+++ b/Data Preparation.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "season2018 = pd.read_csv(\"season 2018 v4.csv\").drop(\"Unnamed: 0\", axis= 1)"
+    "df = pd.read_csv(\"season2018 v4.csv\").drop(\"Unnamed: 0\", axis= 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -47,13 +47,13 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.dtype"
+    "df.dtypes"
    ]
   },
   {
@@ -99,7 +99,139 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "changing the type of the date feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2018-08-30T18:40:00+03:00'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0, \"date\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#deleting the +03:00 part & the T off the dates\n",
+    "df[\"date\"] = [date[:-6].replace(\"T\", \" \") for date in df[\"date\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2018-08-30 18:40:00'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0, \"date\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now it looks more readable, lets change its type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"date\"] = pd.to_datetime(df[\"date\"], format=\"%Y-%m-%d %H:%M:%S\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2018-08-30 18:40:00')"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0, \"date\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fixture_id                 int64\n",
+       "home_team                 object\n",
+       "away_team                 object\n",
+       "home_goals                 int64\n",
+       "away_goals                 int64\n",
+       "venue                     object\n",
+       "referee                   object\n",
+       "date              datetime64[ns]\n",
+       "season                    object\n",
+       "home_coach                object\n",
+       "away_coach                object\n",
+       "home_formation            object\n",
+       "away_formation            object\n",
+       "home_players              object\n",
+       "away_players              object\n",
+       "round                      int64\n",
+       "status                    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
