Completed all matches until aug/13 (round 24)

--- a/comprehensive EDA.ipynb
+++ b/comprehensive EDA.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "1. does win rate change over time? why?\n",
     "\n",
-    "2. Nasser club was the cahmpion, now it seems that al hilal is going to take it. what changed?\n",
+    "2. Nasir club was the cahmpion, now it seems that al hilal is going to take it. what changed?\n",
     "\n",
     "3. does formation matter?\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "5. does the main scorrer participation in small clubs make as much difference as big clubs?\n",
     "\n",
-    "6. "
+    "6. does playing in small unpopular venues make any difference?\n"
    ]
   },
   {
