--- a/Data Collection.ipynb
+++ b/Data Collection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -14797,7 +14797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14805,7 +14805,7 @@
     "#I will only get the lineups for the first 80 matches, and get the other\n",
     "#matches over the next few days\n",
     "\n",
-    "for i in range(90, 101):\n",
+    "for i in range(160, 190):\n",
     "    \n",
     "    match = season2019.loc[i]\n",
     "    fixture_id = match[\"fixture_id\"]\n",
@@ -14840,53 +14840,407 @@
     "    season2019.loc[i, [\"home_coach\", \"away_coach\", \"home_formation\",\n",
     "                       \"away_formation\", \"home_players\",\n",
     "                       \"away_players\"]] = [home_coach, away_coach, home_formation,\n",
-    "                       away_formation, home_players, away_players]\n",
-    "    "
+    "                       away_formation, home_players, away_players]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "fixture_id                           312885\n",
-       "home_team                           Al-Hazm\n",
-       "away_team                          Al-Nassr\n",
-       "home_goals                                0\n",
-       "away_goals                                2\n",
-       "venue                       Ar-Rass Stadium\n",
-       "referee                      Jorge de Sousa\n",
-       "date              2020-02-22T17:40:00+03:00\n",
-       "season                            2019/2020\n",
-       "home_coach                              NaN\n",
-       "away_coach                              NaN\n",
-       "home_formation                          NaN\n",
-       "away_formation                          NaN\n",
-       "home_players                            NaN\n",
-       "away_players                            NaN\n",
-       "round                                    19\n",
-       "status                       Match Finished\n",
-       "Name: 150, dtype: object"
+       "fixture_id                                                   312922\n",
+       "home_team                                                      Abha\n",
+       "away_team                                                  Al-Nassr\n",
+       "home_goals                                                        0\n",
+       "away_goals                                                        2\n",
+       "venue                          Prince Sultan bin Abdul Aziz Stadium\n",
+       "referee                                                        None\n",
+       "date                                      2020-08-10T19:15:00+03:00\n",
+       "season                                                    2019/2020\n",
+       "home_coach                                                A. Chebbi\n",
+       "away_coach                                              Rui Vitória\n",
+       "home_formation                                              4-2-3-1\n",
+       "away_formation                                              4-1-4-1\n",
+       "home_players      [(Abdelali Mhamdi, G), (Karam Barnawi, D), (Na...\n",
+       "away_players      [(Brad Jones, G), (Sultan Al-Ghannam, D), (Mai...\n",
+       "round                                                            24\n",
+       "status                                               Match Finished\n",
+       "Name: 189, dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "season2019.loc[150]"
+    "season2019.loc[189]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixture_id</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_goals</th>\n",
+       "      <th>away_goals</th>\n",
+       "      <th>venue</th>\n",
+       "      <th>referee</th>\n",
+       "      <th>date</th>\n",
+       "      <th>season</th>\n",
+       "      <th>home_coach</th>\n",
+       "      <th>away_coach</th>\n",
+       "      <th>home_formation</th>\n",
+       "      <th>away_formation</th>\n",
+       "      <th>home_players</th>\n",
+       "      <th>away_players</th>\n",
+       "      <th>round</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>234777</td>\n",
+       "      <td>Al-Nassr</td>\n",
+       "      <td>Dhamk</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>King Fahd International Stadium</td>\n",
+       "      <td>M. Conger</td>\n",
+       "      <td>2019-08-22T19:00:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>Rui Vitória</td>\n",
+       "      <td>M. Kouki</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>[(B. Jones, G), (Maicon, D), (Abdulrahman Al O...</td>\n",
+       "      <td>[(C. Rahmani, G), (Jorge Fellipe, D), (Majed H...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>234778</td>\n",
+       "      <td>Al-Ahli Jeddah</td>\n",
+       "      <td>Al-Adalah</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>King Abdullah Sports City</td>\n",
+       "      <td>B. Gassama</td>\n",
+       "      <td>2019-08-22T20:50:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>B. Ivanković</td>\n",
+       "      <td>S. Kasri</td>\n",
+       "      <td>4-4-2</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>[(Mohammed Al-Owais, G), (Hussein Abdul Ghani,...</td>\n",
+       "      <td>[(A. Mathlouthi, G), (A. Ali Guechi, D), (Mort...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>234779</td>\n",
+       "      <td>Al-Hilal Saudi FC</td>\n",
+       "      <td>Abha</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>King Saud University Stadium</td>\n",
+       "      <td>D. Higler</td>\n",
+       "      <td>2019-08-23T19:00:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>R. Lucescu</td>\n",
+       "      <td>A. Chebbi</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[(Abdullah Al Maiouf, G), (Mohammed Jahfali, D...</td>\n",
+       "      <td>[(A. M'Hamdi, G), (Karam Barnawi, D), (Ahmad A...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>234780</td>\n",
+       "      <td>Al Taawon</td>\n",
+       "      <td>Al-Hazm</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>King Abdullah Sport City Stadium</td>\n",
+       "      <td>Luis Godinho</td>\n",
+       "      <td>2019-08-23T19:10:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>Paulo Sérgio</td>\n",
+       "      <td>D. Isăilă</td>\n",
+       "      <td>4-4-2</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[(Cássio, G), (Ricardo Machado, D), (Ibrahim A...</td>\n",
+       "      <td>[(M. Asselah, G), (Naif Al-Mousa, D), (Alemão,...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>234781</td>\n",
+       "      <td>Al-Ittihad FC</td>\n",
+       "      <td>Al-Raed</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>King Abdullah Sports City</td>\n",
+       "      <td>S. Moen</td>\n",
+       "      <td>2019-08-23T20:50:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>J. Sierra</td>\n",
+       "      <td>B. Hasi</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>[(Fawaz Al Qarni, G), (M. da Costa, D), (Ziyad...</td>\n",
+       "      <td>[(A. Doukha, G), (Hussein Al Shuwaish, D), (Mo...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>312923</td>\n",
+       "      <td>Al-Ittihad FC</td>\n",
+       "      <td>Al-Ahli Jeddah</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>King Abdullah Sports City</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-08-09T21:00:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>Fábio Carille</td>\n",
+       "      <td>V. Milojević</td>\n",
+       "      <td>4-3-2-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[(Marcelo Grohe, G), (Mansour Al Harbi, D), (B...</td>\n",
+       "      <td>[(Mohammed Al-Owais, G), (Hussein Abdul Ghani,...</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>312924</td>\n",
+       "      <td>Al Shabab</td>\n",
+       "      <td>Al Taawon</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Prince Faisal bin Fahd Stadium</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-08-10T19:05:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>Luis García</td>\n",
+       "      <td>Vítor Campelos</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>[(Farouk Ben Mustapha, G), (Hassan Fallatah, D...</td>\n",
+       "      <td>[(Cássio, G), (Yaseen Barnawi, D), (Ahmad Asir...</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>312922</td>\n",
+       "      <td>Abha</td>\n",
+       "      <td>Al-Nassr</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Prince Sultan bin Abdul Aziz Stadium</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-08-10T19:15:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>A. Chebbi</td>\n",
+       "      <td>Rui Vitória</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-1-4-1</td>\n",
+       "      <td>[(Abdelali Mhamdi, G), (Karam Barnawi, D), (Na...</td>\n",
+       "      <td>[(Brad Jones, G), (Sultan Al-Ghannam, D), (Mai...</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>312918</td>\n",
+       "      <td>Al-Hazm</td>\n",
+       "      <td>Al-Adalah</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Al Hazem Club Stadium</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-08-10T19:20:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>312925</td>\n",
+       "      <td>Al-Hilal Saudi FC</td>\n",
+       "      <td>Al-Fateh</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>King Saud University Stadium</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-08-10T21:00:00+03:00</td>\n",
+       "      <td>2019/2020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Match Finished</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>192 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    fixture_id          home_team       away_team home_goals away_goals  \\\n",
+       "0       234777           Al-Nassr           Dhamk          2          0   \n",
+       "1       234778     Al-Ahli Jeddah       Al-Adalah          1          1   \n",
+       "2       234779  Al-Hilal Saudi FC            Abha          4          2   \n",
+       "3       234780          Al Taawon         Al-Hazm          1          1   \n",
+       "4       234781      Al-Ittihad FC         Al-Raed          3          1   \n",
+       "..         ...                ...             ...        ...        ...   \n",
+       "187     312923      Al-Ittihad FC  Al-Ahli Jeddah          1          2   \n",
+       "188     312924          Al Shabab       Al Taawon          1          0   \n",
+       "189     312922               Abha        Al-Nassr          0          2   \n",
+       "190     312918            Al-Hazm       Al-Adalah          1          2   \n",
+       "191     312925  Al-Hilal Saudi FC        Al-Fateh          2          1   \n",
+       "\n",
+       "                                    venue       referee  \\\n",
+       "0         King Fahd International Stadium     M. Conger   \n",
+       "1               King Abdullah Sports City    B. Gassama   \n",
+       "2            King Saud University Stadium     D. Higler   \n",
+       "3        King Abdullah Sport City Stadium  Luis Godinho   \n",
+       "4               King Abdullah Sports City       S. Moen   \n",
+       "..                                    ...           ...   \n",
+       "187             King Abdullah Sports City          None   \n",
+       "188        Prince Faisal bin Fahd Stadium          None   \n",
+       "189  Prince Sultan bin Abdul Aziz Stadium          None   \n",
+       "190                 Al Hazem Club Stadium          None   \n",
+       "191          King Saud University Stadium          None   \n",
+       "\n",
+       "                          date     season     home_coach      away_coach  \\\n",
+       "0    2019-08-22T19:00:00+03:00  2019/2020    Rui Vitória        M. Kouki   \n",
+       "1    2019-08-22T20:50:00+03:00  2019/2020   B. Ivanković        S. Kasri   \n",
+       "2    2019-08-23T19:00:00+03:00  2019/2020     R. Lucescu       A. Chebbi   \n",
+       "3    2019-08-23T19:10:00+03:00  2019/2020   Paulo Sérgio       D. Isăilă   \n",
+       "4    2019-08-23T20:50:00+03:00  2019/2020      J. Sierra         B. Hasi   \n",
+       "..                         ...        ...            ...             ...   \n",
+       "187  2020-08-09T21:00:00+03:00  2019/2020  Fábio Carille    V. Milojević   \n",
+       "188  2020-08-10T19:05:00+03:00  2019/2020    Luis García  Vítor Campelos   \n",
+       "189  2020-08-10T19:15:00+03:00  2019/2020      A. Chebbi     Rui Vitória   \n",
+       "190  2020-08-10T19:20:00+03:00  2019/2020            NaN             NaN   \n",
+       "191  2020-08-10T21:00:00+03:00  2019/2020            NaN             NaN   \n",
+       "\n",
+       "    home_formation away_formation  \\\n",
+       "0          4-2-3-1          4-3-3   \n",
+       "1            4-4-2          4-3-3   \n",
+       "2          4-2-3-1        4-2-3-1   \n",
+       "3            4-4-2        4-2-3-1   \n",
+       "4            4-3-3          4-3-3   \n",
+       "..             ...            ...   \n",
+       "187        4-3-2-1        4-2-3-1   \n",
+       "188          4-3-3        4-2-3-1   \n",
+       "189        4-2-3-1        4-1-4-1   \n",
+       "190            NaN            NaN   \n",
+       "191            NaN            NaN   \n",
+       "\n",
+       "                                          home_players  \\\n",
+       "0    [(B. Jones, G), (Maicon, D), (Abdulrahman Al O...   \n",
+       "1    [(Mohammed Al-Owais, G), (Hussein Abdul Ghani,...   \n",
+       "2    [(Abdullah Al Maiouf, G), (Mohammed Jahfali, D...   \n",
+       "3    [(Cássio, G), (Ricardo Machado, D), (Ibrahim A...   \n",
+       "4    [(Fawaz Al Qarni, G), (M. da Costa, D), (Ziyad...   \n",
+       "..                                                 ...   \n",
+       "187  [(Marcelo Grohe, G), (Mansour Al Harbi, D), (B...   \n",
+       "188  [(Farouk Ben Mustapha, G), (Hassan Fallatah, D...   \n",
+       "189  [(Abdelali Mhamdi, G), (Karam Barnawi, D), (Na...   \n",
+       "190                                                NaN   \n",
+       "191                                                NaN   \n",
+       "\n",
+       "                                          away_players round          status  \n",
+       "0    [(C. Rahmani, G), (Jorge Fellipe, D), (Majed H...     1  Match Finished  \n",
+       "1    [(A. Mathlouthi, G), (A. Ali Guechi, D), (Mort...     1  Match Finished  \n",
+       "2    [(A. M'Hamdi, G), (Karam Barnawi, D), (Ahmad A...     1  Match Finished  \n",
+       "3    [(M. Asselah, G), (Naif Al-Mousa, D), (Alemão,...     1  Match Finished  \n",
+       "4    [(A. Doukha, G), (Hussein Al Shuwaish, D), (Mo...     1  Match Finished  \n",
+       "..                                                 ...   ...             ...  \n",
+       "187  [(Mohammed Al-Owais, G), (Hussein Abdul Ghani,...    24  Match Finished  \n",
+       "188  [(Cássio, G), (Yaseen Barnawi, D), (Ahmad Asir...    24  Match Finished  \n",
+       "189  [(Brad Jones, G), (Sultan Al-Ghannam, D), (Mai...    24  Match Finished  \n",
+       "190                                                NaN    24  Match Finished  \n",
+       "191                                                NaN    24  Match Finished  \n",
+       "\n",
+       "[192 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "season2019.loc[season2019[\"status\"] == \"Match Finished\"]"
+   ]
   },
   {
    "cell_type": "code",
