Finished collecting 198 matches of the 2019/2020 season

--- a/comprehensive EDA.ipynb
+++ b/comprehensive EDA.ipynb
@@ -16,7 +16,12 @@
     "\n",
     "5. does the main scorrer participation in small clubs make as much difference as big clubs?\n",
     "\n",
-    "6. does playing in small unpopular venues make any difference?\n"
+    "6. does playing in small unpopular venues make any difference?\n",
+    "\n",
+    "7. how does previous match rating affect the next match result?\n",
+    "\n",
+    "8. What is more relative, last matche rating, or the last match agains the opposing team rating?\n",
+    "\n"
    ]
   },
   {
