Added an announcement on 2 notebooks

--- a/comprehensive EDA.ipynb
+++ b/comprehensive EDA.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I'll be starting my data analysis nanodegree soon, So I will stop working on this notebook until I can feel comfortable doing some data analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There are multiple questions that are going in my head.\n",
     "\n",
     "1. does win rate change over time? why?\n",
