Refactored the code, added more functions, haven't testes them yet. I have also got the first 30 matches of the 2020/2021 season

--- a/Understanding the problem.ipynb
+++ b/Understanding the problem.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Well, since there is no public dataset available for the saudi league i'll have to contact people to get it. to decide  who to contact, we must answer the folloing questions.\n",
+    "Well, since there is no public dataset available for the saudi league i'll have to contact people to get it. to decide  who to contact, we must answer the following questions.\n",
     "\n",
     "1. What are the best football stats websites?\n",
     "2. Is it legal to webscrape these websites?\n",
@@ -155,13 +155,6 @@
     "\n",
     "The exact algorithm is yet to be choosen, We will you try different algorithms, we will also try applying deep learning on our data using tensorflow"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
