collected all missing coaches, dropped the referee column

--- a/Data Collection.ipynb
+++ b/Data Collection.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# I change it after every commit\n",
-    "my_api_key = \"aaca0953c9msh584253bfdf1b401p19f425jsnb228ec894597\""
+    "apiKey = \"49273dd57dmshd0d11cc4a4c7738p160740jsn640210d99aa3\""
    ]
   },
   {
@@ -67,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "season2018 = pd.read_csv(\"season2018.csv\").drop(\"Unnamed: 0\", axis = 1)\n",
-    "season2019 = pd.read_csv(\"season2019.csv\").drop(\"Unnamed: 0\", axis = 1)\n",
+    "season2018 = pd.read_csv(\"Season2018.csv\")\n",
+    "season2019 = pd.read_csv(\"Season2019.csv\")\n",
     "season2020 = pd.read_csv(\"Season2020.csv\")\n"
    ]
   },
@@ -94,7 +94,7 @@
     "\n",
     "headers = {\n",
     "    'x-rapidapi-host': \"api-football-v1.p.rapidapi.com\",\n",
-    "    'x-rapidapi-key': my_api_key\n",
+    "    'x-rapidapi-key': apiKey\n",
     "    }\n",
     "\n",
     "response = requests.request(\"GET\", url, headers=headers)\n",
@@ -974,7 +974,7 @@
     "\n",
     "headers = {\n",
     "    'x-rapidapi-host': \"api-football-v1.p.rapidapi.com\",\n",
-    "    'x-rapidapi-key': my_api_key\n",
+    "    'x-rapidapi-key': apiKey\n",
     "    }\n",
     "\n",
     "response = requests.request(\"GET\", url, headers=headers)\n",
@@ -1001,7 +1001,7 @@
     "\n",
     "    Args:\n",
     "    SeasonCode: int or String. Which is the code specified by the\n",
-    "                    api for querying the details of a specific season \n",
+    "                    api for querying the details of a specific season.\n",
     "\n",
     "\n",
     "    Returns:\n",
@@ -1011,7 +1011,7 @@
     "\n",
     "    headers = {\n",
     "        'x-rapidapi-host': \"api-football-v1.p.rapidapi.com\",\n",
-    "        'x-rapidapi-key': my_api_key\n",
+    "        'x-rapidapi-key': apiKey\n",
     "        }\n",
     "\n",
     "    fixtures = requests.request(\"GET\", url, headers=headers)\n",
@@ -1021,22 +1021,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_df(fixtures, year):\n",
+    "def create_df(seasonCode, year):\n",
     "    \"\"\"Creates a dataframe with the the basic details of the match.\n",
     "\n",
     "    Args:\n",
-    "    fixtures: Json object. that contains all fixtures, the one resulted from the get_fixtures() function\n",
+    "    seasonCode:  int or String. Which is the code specified by the\n",
+    "                    api for querying the details of a specific season.\n",
     "    \n",
     "    year: String. Which specifies which season are we creating the dataframe for (e.g. 2020/2021)\n",
     "\n",
     "    Returns:\n",
+    "    \n",
     "    season_df: Pandas Dataframe. that is consisted of all matches 'basic' details.\n",
+    "    \n",
+    "    **** Note: for creating a dataframe for a full completed season this might****\n",
     "    \"\"\"\n",
-    "    matches = fixtures[\"api\"][\"fixtures\"]\n",
+    "    \n",
+    "    matches = get_fixtures(seasonCode)\n",
     "    \n",
     "    season_df = pd.DataFrame(columns=['fixture_id', 'home_team', 'away_team', 'home_goals',\n",
     "                                      'away_goals', 'venue', 'referee',\n",
@@ -1047,33 +1052,10 @@
     "    \n",
     "    for i in range(240):\n",
     "        season_df = addMatchInfo(season_df, year, i, matches[i])\n",
-    "        ## I could add the lineups here but it requires one request per match so it must be collected on several days \n",
-    "        \n",
+    "        season_df = addMatchLineups(seaosn_df, i)\n",
+    "        season_df = addPlayerRatings(season_df, i)\n",
+    "            \n",
     "    return season_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['fixture_id', 'home_team', 'away_team', 'home_goals', 'away_goals',\n",
-       "       'venue', 'referee', 'round', 'date', 'season', 'status', 'home_coach',\n",
-       "       'home_foramtion', 'home_players', 'away_coach', 'away_formation',\n",
-       "       'away_players', 'H_avg_ratings', 'A_avg_ratings'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "season2020.columns"
    ]
   },
   {
@@ -1133,7 +1115,7 @@
     "\n",
     "    headers = {\n",
     "        'x-rapidapi-host': \"api-football-v1.p.rapidapi.com\",\n",
-    "        'x-rapidapi-key': my_api_key\n",
+    "        'x-rapidapi-key': apiKey\n",
     "        }\n",
     "\n",
     "    response = requests.request(\"GET\", url, headers=headers).json()\n",
@@ -1180,7 +1162,7 @@
     "\n",
     "    headers = {\n",
     "        'x-rapidapi-host': \"api-football-v1.p.rapidapi.com\",\n",
-    "        'x-rapidapi-key': my_api_key\n",
+    "        'x-rapidapi-key': apiKey\n",
     "        }\n",
     "\n",
     "    response = requests.request(\"GET\", url, headers=headers)\n",
@@ -1309,7 +1291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "season2020 = create_df(season2020_fixtures, \"2020/2021\")"
+    "season2020 = create_df(season2020code, \"2020/2021\")"
    ]
   },
   {
